--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Evan Lynch",
   "dependencies": {
     "backbone": "^1.1.2",
+    "bcrypt": "^0.8.0",
     "body-parser": "^1.9.0",
     "browserify": "^5.12.1",
     "cookie-parser": "^1.3.3",
